--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nx run-many --target=serve --projects=frontend,backend --parallel=true",
+    "start": "nx run-many --target=serve --projects=frontend,backend --parallel=true",
     "build": "nx run-many --target=build --projects=frontend,backend --parallel=true",
     "serve:prod": "node dist/apps/backend/main.js"
   },
@@ -19,6 +19,7 @@
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
     "@nestjs/schematics": "^10.0.1",
+    "@nestjs/swagger": "^7.4.0",
     "@nestjs/testing": "^10.0.2",
     "@nx/angular": "^19.5.7",
     "@nx/eslint": "19.5.7",
@@ -49,6 +50,7 @@
     "nx": "19.5.7",
     "postcss": "^8.4.41",
     "prettier": "^2.6.2",
+    "swagger-ui-express": "^5.0.1",
     "tailwindcss": "^3.4.9",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
