--- a/frontend/project.json
+++ b/frontend/project.json
@@ -8,12 +8,16 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/frontend",
         "index": "frontend/src/index.html",
         "browser": "frontend/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "frontend/tsconfig.app.json",
         "assets": [
           {
@@ -21,7 +25,10 @@
             "input": "frontend/public"
           }
         ],
-        "styles": ["frontend/src/styles.css"],
+        "styles": [
+          "frontend/src/styles.css",
+          "node_modules/@angular/cdk/overlay-prebuilt.css"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -80,7 +87,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "frontend/jest.config.ts"
       }
