--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular-eslint/eslint-plugin": "^18.0.1",
     "@angular-eslint/eslint-plugin-template": "^18.0.1",
     "@angular-eslint/template-parser": "^18.0.1",
+    "@angular/cdk": "^18.2.0",
     "@angular/cli": "~18.1.0",
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
@@ -49,6 +50,8 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
+    "marked": "^14.0.0",
+    "ngx-markdown": "^18.0.0",
     "nx": "19.5.7",
     "postcss": "^8.4.41",
     "prettier": "^2.6.2",
@@ -61,6 +64,7 @@
   },
   "dependencies": {
     "@angular/animations": "~18.1.0",
+    "@angular/cdk": "~18.2.0",
     "@angular/common": "~18.1.0",
     "@angular/compiler": "~18.1.0",
     "@angular/core": "~18.1.0",
