--- a/frontend/project.json
+++ b/frontend/project.json
@@ -8,16 +8,12 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/frontend",
         "index": "frontend/src/index.html",
         "browser": "frontend/src/main.ts",
-        "polyfills": [
-          "zone.js"
-        ],
+        "polyfills": ["zone.js"],
         "tsConfig": "frontend/tsconfig.app.json",
         "assets": [
           {
@@ -27,7 +23,9 @@
         ],
         "styles": [
           "frontend/src/styles.css",
-          "node_modules/@angular/cdk/overlay-prebuilt.css"
+          "node_modules/@angular/cdk/overlay-prebuilt.css",
+          "node_modules/prismjs/themes/prism-okaidia.css",
+          "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css"
         ],
         "scripts": []
       },
@@ -87,9 +85,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "frontend/jest.config.ts"
       }
